# localdeploy

./: .gitignore  README.md  main.py  pyproject.toml
src/: __init__.py  config.py  deployment.py  ngrok.py
src/app/: app.py  models.py
